# zero2prod

./: Cargo.toml  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: general.yml
migrations/: 20220221191157_make_status_not_null_in_subscriptions.sql  20220221191323_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
