[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-rc.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
config = "0.11"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.5.10", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
unicode-segmentation = "1"
validator = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Test
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

#Tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5.0-rc.3"


[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
